# H2Analyst

./: .gitignore  README.md
h2analyst/: CMakeLists.txt  data_explorer.cpp  data_explorer.h  data_parser.cpp  data_parser.h  data_store.cpp  data_store.h  datafile.cpp  datafile.h  dataset.cpp  dataset.h  dataset_operators.cpp  dataset_operators.h  h2analyst.cpp  h2analyst.h  layout_selector.cpp  layout_selector.h  main.cpp  namespace.h  plot_base.cpp  plot_base.h  plot_manager.cpp  plot_manager.h  plot_time.cpp  plot_time.h  plot_tracer.cpp  plot_tracer.h  post_pro_dialog.cpp  post_pro_dialog.h  post_pro_expression_edit.cpp  post_pro_expression_edit.h  resources.qrc  tree_item.cpp  tree_item.h
h2analyst/references/: Best Color Palettes for Scientific Figures and Data Visualizations.html  data_resampling_modes.odg  style_guide.html
h2analyst/references/Best Color Palettes for Scientific Figures and Data Visualizations_files/: 8ca1f11c_1.min.css  css2.css  d-css-runtime-desktop-one-package-structured-global.min.css  d-js-one-runtime-unified-desktop.min.js  dashlane-webkit-animation-page-script.js  snipcart.css  snipcart.js
